updated home page

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <li><a href="#about" class="aboutUs">About us</a></li>
           <li><a href="" class="comments">Comments</a></li>
         </ul>
-        <a class="button">Contact Us</a>
+        <a class="button" href="#subscription">Contact Us</a>
       </div>
     </nav>
     <!----------------------------------------------------
@@ -230,16 +230,38 @@
          ABOUT US SECTION END
     ------------------------------------------------------>
     <!------------------------------------------------------
-         FOOTER SECTION START
+         SUBSCRIPTION SECTION START
     ------------------------------------------------------>
-    <section id="footer">
-      <img src="images/logo.webp" alt="" />
-      <p>HELP LINE NUMBER: +92330362257</p>
-      <p>© 2020 All Rights Reserved. ROYAL THREAD</p>
+    <section id="subscription">
+      <div class="form-box">
+        <div class="form-value">
+          <form action="">
+            <div class="inputbox">
+              <i class="fa-solid fa-user"></i>
+              <input type="name" name="" id="" required />
+              <label for="">Name</label>
+            </div>
+            <div class="inputbox">
+              <i class="fa-solid fa-envelope"></i>
+              <input type="email" required />
+              <label for="email">Email</label>
+            </div>
+            <div class="inputbox">
+              <i class="fa-brands fa-whatsapp"></i>
+              <input type="tel" required />
+              <label for="tel">Whatsapp</label>
+            </div>
+            <div>
+              <button>SUBSCRIBE</button>
+            </div>
+          </form>
+        </div>
+      </div>
     </section>
     <!------------------------------------------------------
-         FOOTER SECTION END
+         SUBSCRIPTION SECTION END
     ------------------------------------------------------>
+
     <script src="js/index.js"></script>
   </body>
 </html>
