--- a/women-dresses.html
+++ b/women-dresses.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WOMEN COLLECTION</title>
+    <title>WOMEN DRESSES COLLECTION</title>
     <link rel="stylesheet" href="css/women-dresses.css" />
     <!------------------------------------------------------
          FAVICON START
@@ -219,6 +219,13 @@
     </div>
     <!----------------------------------------------------
          CART END
+        ------------------------------------------------------>
+    <!----------------------------------------------------
+         ORDER FORM START
+        ------------------------------------------------------>
+    <section id="order-form"></section>
+    <!----------------------------------------------------
+         ORDER FORM END
         ------------------------------------------------------>
   </body>
   <script src="js/women-dresses.js"></script>
