fix code error in women dresses collection

--- a/women-dresses.html
+++ b/women-dresses.html
@@ -64,7 +64,7 @@
   <body>
     <!-- ------------------------------------
     NAV START 
-   ------------------------------------- -->
+    ---------------------------------------->
     <nav>
       <div class="nav-left">
         <a href="index.html"
@@ -81,9 +81,12 @@
         <a class="button">Contact Us</a>
       </div>
     </nav>
-    <!-- --------------------------------------------------
+    <!----------------------------------------------------
          NAV END
-    ---------------------------------------------------- -->
+         ------------------------------------------------------->
+    <!----------------------------------------------------
+          PRODUCT SECTION STARTED
+          ------------------------------------------------------->
     <section id="products-section">
       <div id="filter">
         <h1>WOMEN DRESSES</h1>
@@ -152,7 +155,7 @@
       <div class="collection-div">
         <!----------------------------------------------------
           PRODUCT CARD START
-        ------------------------------------------------------>
+          ------------------------------------------------------>
         <div class="card">
           <div class="card-left">
             <img class="bigImg" src="images/women-dresses/product (1).jpg" />
@@ -257,12 +260,12 @@
         </div>
         <!----------------------------------------------------
           PRODUCT CARD END
-        ------------------------------------------------------>
+          ------------------------------------------------------>
       </div>
     </section>
     <!----------------------------------------------------
-    CART START
-  ------------------------------------------------------>
-    <script src="js/women-dresses.js"></script>
+                PRODUCT SECTION END
+      ------------------------------------------------------->
   </body>
+  <script src="js/women-dresses.js"></script>
 </html>
