fix some errors in women dresses collection page

--- a/women-dresses.html
+++ b/women-dresses.html
@@ -84,6 +84,7 @@
     <!----------------------------------------------------
          NAV END
      ------------------------------------------------------->
+
     <!----------------------------------------------------
          PRODUCT SECTION STARTED
     ------------------------------------------------------->
@@ -207,68 +208,16 @@
         <!----------------------------------------------------
           PRODUCT CARD END
         ------------------------------------------------------>
-        <!----------------------------------------------------
-          PRODUCT CARD START
-        ------------------------------------------------------>
-        <div class="card">
-          <div class="card-left">
-            <img class="bigImg" src="images/women-dresses/product (1).jpg" />
-          </div>
-          <div class="card-right">
-            <h3>LAWN 03 PEICE STICHED</h3>
-            <div><span>Product Code :</span><span>SKU-LAWN-12345</span></div>
-            <div>
-              <span>Size :</span
-              ><span
-                ><select name="" id="size">
-                  <option value="S">S</option>
-                  <option value="M">M</option>
-                  <option value="L">L</option>
-                  <option value="XL">XL</option>
-                </select></span
-              >
-            </div>
-            <div>
-              <span>Color :</span
-              ><span
-                ><select name="" id="">
-                  <option value="Red">Red</option>
-                  <option value="Green">Green</option>
-                  <option value="Blue">Blue</option>
-                  <option value="Yellow">Yellow</option>
-                </select></span
-              >
-            </div>
-            <div><span>Price:</span><span>PKR.2000</span></div>
-            <div><span>Discount:</span><span>30% OFF</span></div>
-            <div><span>Selling Price:</span><span>PKR.1600</span></div>
-            <div id="photo-change">
-              <img src="images/women-dresses/product (2).jpg" alt="" />
-              <img src="images/women-dresses/product (3).jpg" alt="" />
-              <img src="images/women-dresses/product (5).jpg" alt="" />
-              <img src="images/women-dresses/product (1).jpg" alt="" />
-            </div>
-            <div id="add-cart-btn">
-              <a href=""
-                >ADD TO CART &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i
-                  class="fa-solid fa-cart-shopping fa-bounce"
-                  style="font-size: 14px"
-                ></i
-              ></a>
-            </div>
-          </div>
-        </div>
-        <!----------------------------------------------------
-          PRODUCT CARD END
-          ------------------------------------------------------>
       </div>
     </section>
     <!----------------------------------------------------
          PRODUCT SECTION END
     ------------------------------------------------------->
+
     <!----------------------------------------------------
          ORDER FORM START
     ------------------------------------------------------->
+    <section id="order-form"></section>
     <!----------------------------------------------------
          ORDER FORM END
     ------------------------------------------------------->
