--- a/women-dresses.html
+++ b/women-dresses.html
@@ -157,52 +157,101 @@
         <!----------------------------------------------------
           PRODUCT CARD START
           ------------------------------------------------------>
-        <div class="card">
-          <div class="card-left">
-            <img class="bigImg" src="images/women-dresses/product (1).jpg" />
+          <div class="card">
+            <div class="card-left">
+              <img class="bigImg" src="images/women-dresses/product (1).jpg" />
+            </div>
+            <div class="card-right">
+              <h3>LILON 03 PEICE UN-STICHED</h3>
+              <div><span  >Product Code :</span><span id="product-card-code" >SKU-LAWN-2468</span></div>
+              <div>
+                <span>Size :</span
+                ><span
+                  ><select name="" id="size">
+                    <option value="S">S</option>
+                    <option value="M">M</option>
+                    <option value="L">L</option>
+                    <option value="XL">XL</option>
+                  </select></span
+                >
+              </div>
+              <div>
+                <span>Color :</span
+                ><span
+                  ><select name="" id="color">
+                    <option value="Red">Red</option>
+                    <option value="Green">Green</option>
+                    <option value="Blue">Blue</option>
+                    <option value="Yellow">Yellow</option>
+                  </select></span
+                >
+              </div>
+              <div><span>Price:</span><span><span>PKR. </span><span id="product-card-price" >2000</span></span></div>
+              <div><span>Discount:</span><span><span id="product-card-discount">0</span><span>% OFF</span></span></div>
+              <div><span>Selling Price:</span><span><span>PKR.</span><span id="product-card-total-amount" > 1600</span></span></div>
+              <div id="photo-change">
+                <img src="images/women-dresses/product (2).jpg" alt="" />
+                <img src="images/women-dresses/product (3).jpg" alt="" />
+                <img src="images/women-dresses/product (5).jpg" alt="" />
+                <img src="images/women-dresses/product (1).jpg" alt="" />
+              </div>
+              <div class="order-now-btn" id="add-cart-btn">
+                <span>ORDER NOW</span>
+              </div>
+            </div>
           </div>
-          <div class="card-right">
-            <h3>LAWN 03 PEICE STICHED</h3>
-            <div><span>Product Code :</span><span>SKU-LAWN-12345</span></div>
-            <div>
-              <span>Size :</span
-              ><span
-                ><select name="" id="size">
-                  <option value="S">S</option>
-                  <option value="M">M</option>
-                  <option value="L">L</option>
-                  <option value="XL">XL</option>
-                </select></span
-              >
+          <!----------------------------------------------------
+            PRODUCT CARD END
+          ------------------------------------------------------> 
+          <!----------------------------------------------------
+          PRODUCT CARD START
+          ------------------------------------------------------>
+          <div class="card">
+            <div class="card-left">
+              <img class="bigImg" src="images/women-dresses/product (1).jpg" />
             </div>
-            <div>
-              <span>Color :</span
-              ><span
-                ><select name="" id="">
-                  <option value="Red">Red</option>
-                  <option value="Green">Green</option>
-                  <option value="Blue">Blue</option>
-                  <option value="Yellow">Yellow</option>
-                </select></span
-              >
-            </div>
-            <div><span>Price:</span><span>PKR.2000</span></div>
-            <div><span>Discount:</span><span>30% OFF</span></div>
-            <div><span>Selling Price:</span><span>PKR.1600</span></div>
-            <div id="photo-change">
-              <img src="images/women-dresses/product (2).jpg" alt="" />
-              <img src="images/women-dresses/product (3).jpg" alt="" />
-              <img src="images/women-dresses/product (5).jpg" alt="" />
-              <img src="images/women-dresses/product (1).jpg" alt="" />
-            </div>
-            <div id="add-cart-btn">
-              <a href="">ORDER NOW</a>
+            <div class="card-right">
+              <h3>LILON 03 PEICE UN-STICHED</h3>
+              <div><span  >Product Code :</span><span id="product-card-code" >SKU-LAWN-2468</span></div>
+              <div>
+                <span>Size :</span
+                ><span
+                  ><select name="" id="size">
+                    <option value="S">S</option>
+                    <option value="M">M</option>
+                    <option value="L">L</option>
+                    <option value="XL">XL</option>
+                  </select></span
+                >
+              </div>
+              <div>
+                <span>Color :</span
+                ><span
+                  ><select name="" id="color">
+                    <option value="Red">Red</option>
+                    <option value="Green">Green</option>
+                    <option value="Blue">Blue</option>
+                    <option value="Yellow">Yellow</option>
+                  </select></span
+                >
+              </div>
+              <div><span>Price:</span><span><span>PKR. </span><span id="product-card-price" >3000</span></span></div>
+              <div><span>Discount:</span><span><span id="product-card-discount">10</span><span>% OFF</span></span></div>
+              <div><span>Selling Price:</span><span><span>PKR.</span><span id="product-card-total-amount" > 1600</span></span></div>
+              <div id="photo-change">
+                <img src="images/women-dresses/product (2).jpg" alt="" />
+                <img src="images/women-dresses/product (3).jpg" alt="" />
+                <img src="images/women-dresses/product (5).jpg" alt="" />
+                <img src="images/women-dresses/product (1).jpg" alt="" />
+              </div>
+              <div class="order-now-btn" id="add-cart-btn">
+                <span>ORDER NOW</span>
+              </div>
             </div>
           </div>
-        </div>
-        <!----------------------------------------------------
-          PRODUCT CARD END
-        ------------------------------------------------------>
+          <!----------------------------------------------------
+            PRODUCT CARD END
+          ------------------------------------------------------> 
       </div>
     </section>
     <!----------------------------------------------------
@@ -212,14 +261,14 @@
     <!----------------------------------------------------
          ORDER FORM START
     ------------------------------------------------------->
-    <section id="order-form">
-      <form id="form" action="POST" class="form-main-div">
+    <section id="order-form" style="display: none" >
+    <form id="form" action="POST" class="form-main-div" >
         <i class="fa-solid fa-xmark"></i>
         <div class="form-left-div">
           <h4>CUSTOMER'S ORDER DETAILS</h4>
           <div class="form">
             <label for="">ORDER NO :</label>
-            <input type="text" id="order-number" name="orderNumber" readonly />
+            <input type="text" id="order-number" placeholder="ORDER NO...." name="orderNumber" readonly />
             <label for="">CUSTOMER NAME :</label>
             <input
               type="text"
@@ -251,6 +300,7 @@
             <textarea
               name="customerAddress"
               id="customer-address"
+              placeholder="SHIPPING ADDRESS...."
               cols="30"
               rows="2"
               required
@@ -271,13 +321,13 @@
             <input
               type="text"
               id="product-color"
-              name="productColor"
+            name="productColor"
               readonly
             />
             <label for="">SELLING PRICE (PKR) :</label>
             <input
               type="text"
-              id="current-price"
+              id="selling-price"
               name="productCurrentPrice"
               readonly
             />
@@ -289,7 +339,7 @@
               value="1"
               min="1"
               max="3"
-              placeholder="QUANTITY MIN 01 & MAX 03 PER ORDER"
+              placeholder="QUANTITY...."
               required
             />
             <label for="">TOTAL AMOUNT (PKR) :</label>
