created footer sectio in home page

--- a/index.html
+++ b/index.html
@@ -261,7 +261,34 @@
     <!------------------------------------------------------
          SUBSCRIPTION SECTION END
     ------------------------------------------------------>
-
+    <!------------------------------------------------------
+         FOOTER SECTION START
+    ------------------------------------------------------>
+    <section id="footer">
+      <div class="footer-image">
+        <img src="images/logo.webp" alt="" />
+      </div>
+      <div class="footer-services">
+        <a href="women-dresses.html">Women Dresses</a>
+        <a href="men-dresses.html">Men Dresses</a>
+        <a href="bags-&-accessories.html">Bags & Accessories</a>
+        <a href="watches.html">Watches</a>
+        <a href="jewelary.htlm">Jewelry</a>
+        <a href="bauty-&-fragrances.thml">Beauty & Fragrances</a>
+      </div>
+      <div class="help-line">
+        Help Line Number:
+        <a href="tel:032335-0000">+92335-00000 </a>
+      </div>
+      <div class="email">
+        Email Address:
+        <a href="mailto:royalthrad@gmail.com">royalthrad@gmali.com</a>
+      </div>
+      <p>© 2020 All Rights Reserved. ROYAL THREAD</p>
+    </section>
+    <!------------------------------------------------------
+         FOOTER SECTION END
+    ------------------------------------------------------>
     <script src="js/index.js"></script>
   </body>
 </html>
