created new footer in home page

--- a/index.html
+++ b/index.html
@@ -265,26 +265,38 @@
          FOOTER SECTION START
     ------------------------------------------------------>
     <section id="footer">
-      <div class="footer-image">
-        <img src="images/logo.webp" alt="" />
-      </div>
       <div class="footer-services">
-        <a href="women-dresses.html">Women Dresses</a>
-        <a href="men-dresses.html">Men Dresses</a>
-        <a href="bags-&-accessories.html">Bags & Accessories</a>
-        <a href="watches.html">Watches</a>
-        <a href="jewelary.htlm">Jewelry</a>
-        <a href="bauty-&-fragrances.thml">Beauty & Fragrances</a>
+        <a href="women-dresses.html">WOMEN DRESSES</a>
+        <a href="men-dresses.html">MEN DRESSES</a>
+        <a href="bags-&-accessories.html">BAGS & ACCESSORIES</a>
+        <a href="watches.html">WATCHES</a>
+        <a href="jewelary.htlm">JEWELRY</a>
+        <a href="bauty-&-fragrances.thml">BEAUTY & FRAGRANCES</a>
       </div>
-      <div class="help-line">
-        Help Line Number:
-        <a href="tel:032335-0000">+92335-00000 </a>
+      <hr />
+      <h1>ROYAL THREAD</h1>
+      <p>
+        At Royal Thread, customer satisfaction is paramount. Our commitment to
+        exceptional quality, attention to detail, and impeccable customer
+        service ensures that every purchase is a delightful experience. We're
+        here to help you embrace your unique style and feel like royalty every
+        day.
+      </p>
+      <div class="social-icons">
+        <a href="">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="">
+          <i class="fa-brands fa-facebook-f"></i>
+        </a>
+        <a href="">
+          <i class="fa-brands fa-youtube"></i>
+        </a>
+        <a href="">
+          <i class="fa-brands fa-github-alt"></i>
+        </a>
       </div>
-      <div class="email">
-        Email Address:
-        <a href="mailto:royalthrad@gmail.com">royalthrad@gmali.com</a>
-      </div>
-      <p>© 2020 All Rights Reserved. ROYAL THREAD</p>
+      <span class="copy-right">© 2020 All Rights Reserved. Royal Thread</span>
     </section>
     <!------------------------------------------------------
          FOOTER SECTION END
