create form submitting feature

--- a/women-dresses.html
+++ b/women-dresses.html
@@ -328,7 +328,7 @@
             <input
               type="text"
               id="selling-price"
-              name="productCurrentPrice"
+              name="productSellingPrice"
               readonly
             />
             <label for="">QUANTITY :</label>
