remove github icon and add twitter icon

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
           <i class="fa-brands fa-youtube"></i>
         </a>
         <a href="">
-          <i class="fa-brands fa-github-alt"></i>
+          <i class="fa-brands fa-twitter"></i>
         </a>
       </div>
       <span class="copy-right">© 2020 All Rights Reserved. Royal Thread</span>
