--- a/index.html
+++ b/index.html
@@ -273,7 +273,6 @@
         <a href="jewelary.htlm">JEWELRY</a>
         <a href="bauty-&-fragrances.thml">BEAUTY & FRAGRANCES</a>
       </div>
-      <hr />
       <h1>ROYAL THREAD</h1>
       <p>
         At Royal Thread, customer satisfaction is paramount. Our commitment to
@@ -284,10 +283,13 @@
       </p>
       <div class="social-icons">
         <a href="">
-          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-facebook-f"></i>
         </a>
         <a href="">
-          <i class="fa-brands fa-facebook-f"></i>
+          <i class="fa-brands fa-whatsapp"></i>
+        </a>
+        <a href="">
+          <i class="fa-brands fa-instagram"></i>
         </a>
         <a href="">
           <i class="fa-brands fa-youtube"></i>
