Linked whatsapp and email

--- a/women-dresses.html
+++ b/women-dresses.html
@@ -360,6 +360,7 @@
     <!----------------------------------------------------
          ORDER FORM END
     ------------------------------------------------------->
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="js/women-dresses.js"></script>
   </body>
-  <script src="js/women-dresses.js"></script>
 </html>
