created modal box

--- a/women-dresses.html
+++ b/women-dresses.html
@@ -379,6 +379,18 @@
     <!----------------------------------------------------
          ORDER FORM END
     ------------------------------------------------------->
+    <!----------------------------------------------------
+         MODAL BOX START
+    ------------------------------------------------------->
+    <section id="modal-box">
+      <i class="fa-solid fa-check"></i>
+      <p>SUCCESS</p>
+      <span>Your data has been saved successfully !!!</span>
+      <button>OK</button>
+    </section>
+    <!----------------------------------------------------
+         MODAL BOX END
+    ------------------------------------------------------->
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="js/women-dresses.js"></script>
   </body>
