created motal box

--- a/women-dresses.html
+++ b/women-dresses.html
@@ -95,9 +95,9 @@
           <h2>STUFF TYPE</h2>
           <select name="" id="stuff-type">
             <option value="ALL" selected>ALL</option>
-            <option value="LILON" >LILON</option>
-            <option value="COTTON" >COTTON</option>
-            <option value="LAWN" >LAWN</option>
+            <option value="LILON">LILON</option>
+            <option value="COTTON">COTTON</option>
+            <option value="LAWN">LAWN</option>
             <option value="SILK">SILK</option>
             <option value="MIXED">MIXED</option>
           </select>
@@ -122,22 +122,25 @@
         </div>
         <div class="button">
           <button class="clearBtn">CLEAR</button>
-          <button class="applyBtn" >APPLY</button>
+          <button class="applyBtn">APPLY</button>
         </div>
       </div>
       <div class="collection-div">
         <!----------------------------------------------------
           PRODUCT CARD START
           ------------------------------------------------------>
-          <div class="card">
-            <div class="card-left">
-              <img class="bigImg" src="images/women-dresses/product (1).jpg" />
+        <div class="card">
+          <div class="card-left">
+            <img class="bigImg" src="images/women-dresses/product (1).jpg" />
+          </div>
+          <div class="card-right">
+            <div id="zoomedDiv">
+              <img
+                src="images/women-dresses/product (1).jpg"
+                alt="Zoomed Image"
+              />
             </div>
-            <div class="card-right">
-            <div id="zoomedDiv" >
-              <img src="images/women-dresses/product (1).jpg" alt="Zoomed Image">
-            </div>
-            <h3 class="product-name" >MIXED</h3>
+            <h3 class="product-name">MIXED</h3>
             <div>
               <span>Product Code :</span
               ><span id="product-card-code">SKU-LAWN-2468</span>
@@ -200,18 +203,21 @@
             PRODUCT CARD END
           ------------------------------------------------------>
 
-          <!----------------------------------------------------
+        <!----------------------------------------------------
           PRODUCT CARD START
           ------------------------------------------------------>
-          <div class="card">
-            <div class="card-left">
-              <img class="bigImg" src="images/women-dresses/product (1).jpg" />
+        <div class="card">
+          <div class="card-left">
+            <img class="bigImg" src="images/women-dresses/product (1).jpg" />
+          </div>
+          <div class="card-right">
+            <div id="zoomedDiv">
+              <img
+                src="images/women-dresses/product (1).jpg"
+                alt="Zoomed Image"
+              />
             </div>
-            <div class="card-right">
-            <div id="zoomedDiv" >
-              <img src="images/women-dresses/product (1).jpg" alt="Zoomed Image">
-            </div>
-            <h3 class="product-name" >MIXED</h3>
+            <h3 class="product-name">MIXED</h3>
             <div>
               <span>Product Code :</span
               ><span id="product-card-code">SKU-LAWN-2468</span>
